--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,4 +11,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 </html>
